# libapdu

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  README_ZH.md
doc/: LIBAPDU_PRINCIPLES_ZH.md
docs/: LIBAPDU_PRINCIPLES.md  LIBAPDU_PRINCIPLES_ZH.md
include/libapdu/: apdu.h
src/: apdu.c
tests/: test_apdu.c
